Fixed spacing issue on some pages

--- a/dev/styles/styles.css
+++ b/dev/styles/styles.css
@@ -241,8 +241,6 @@ input{
     cursor: pointer;
 }
 .jumbotron {
-    height: 200px;
-    margin-top: -50px;
     margin-right: -100px;
     margin-left: -100px;
 
